--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>21</java.version>
         <postgresql.version>42.7.4</postgresql.version>
         <lombok.version>1.18.34</lombok.version>
+        <liquibase.version>4.29.1</liquibase.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
